--- a/cems-api.yml
+++ b/cems-api.yml
@@ -473,12 +473,37 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
-          
+  
+  /company/{company_id}/license_group:
+    get:
+      tags:
+        - "Company"
+      summary: "Get a list of license types for a company by alphabetical order"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/LicenseGroup"
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+        404:
+          description: "Company not found"
+         
   /company/{company_id}/licensetype:
     get:
       tags:
         - "Company"
-      summary: "Get a list of license types for a company"
+      summary: "Get a list of license types for a company by ID"
       description: ""
       parameters:
         - in: "path"
@@ -3519,7 +3544,27 @@ definitions:
             name: 
               type: "string"
               example: "Webinar"
-              
+  
+  LicenseGroup:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 5
+            name: 
+              type: "string"
+              example: "RN"
+            constant: 
+              type: "string"
+              example: "rn"
+  
   OrgUnit:   
     type: "object"
     required: 
