--- a/cems-api.yml
+++ b/cems-api.yml
@@ -738,6 +738,37 @@ paths:
         404:
           description: "Company not found"
           
+  /company/{company_id}/organizational-unit/list/{prefix}:
+    get:
+      tags:
+        - "Organizational Unit"
+      summary: "Get Organizational Unit for a company using a prefix"
+      description: ""
+      parameters:
+        - name: "company_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+        - name: "prefix"
+          in: "path"
+          description: ""
+          required: true
+          type: "string"
+          x-example: "North"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/OrgUnitPrefix"
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+        404:
+          description: "Company not found"
+        
   /company/{company_id}/organizational-unit/{organizational_unit_id}:
     put:
       tags:
@@ -3960,6 +3991,35 @@ definitions:
               type: "string"
               example: "Demo Region"
             parentUnit:
+              type: "number"
+              example: 113
+  
+  OrgUnitPrefix:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            formattedLabel: 
+              type: "string"
+              example: "- Northern Region"
+            path: 
+              type: "string"
+              example: "Demo Company"
+            id: 
+              type: "number"
+              example: 115
+            label: 
+              type: "string"
+              example: "Northern Region"
+            name: 
+              type: "string"
+              example: "Northern Region"
+            parentUnit: 
               type: "number"
               example: 113
               
